crates/keron-lang/tests/corpus/errors/check/struct_duplicate_field.keron
struct Point { x: Int, y: Int }

val p: Point = Point { x: 1, x: 2, y: 3 }
